--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,25 @@ body {
   border-radius: 50%;
   box-shadow: 4px 4px 14px black;
 }
+.container {
+  max-width: 500px;
+  margin: auto;
+}
+.about {
+  padding: 15px;
+  border: 5px solid slateblue;
+}
+h1 {
+  padding: 15px;
+  border: 5px solid slateblue;
+}
+
+.social {
+  padding: 15px;
+  border: 5px solid slateblue;
+}
+.form {
+  padding: 15px;
+  border: 5px solid slateblue;
+}
+
