--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 100;
 }
+a {
+  color: darkred;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
 .avatar {
   width: 350px;
   border-radius: 50%;
@@ -17,18 +24,26 @@ body {
 .about {
   padding: 15px;
   border: 5px solid slateblue;
+  margin-top: 20px;
+  background-color: rgb(162, 205, 255);
+  border-radius: 25px;
 }
 h1 {
   padding: 15px;
   border: 5px solid slateblue;
+  background-color: rgb(237, 255, 138);
+  border-radius: 25px;
 }
 
 .social {
   padding: 15px;
   border: 5px solid slateblue;
+  background-color: rgb(252, 143, 143);
+  border-radius: 25px;
 }
 .form {
   padding: 15px;
   border: 5px solid slateblue;
+  background-color: rgb(237, 255, 138);
+  border-radius: 25px;
 }
-
